bodhi-aws-main/deployment/distribution-template/monitoring-resources/grafana-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  gateways:
    - monitoring-gateway
  hosts:
    - <<__subdomain_grafana__>>.<<__domain__>>
  http:
    - route:
        - destination:
            host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
