bodhi-aws-main/deployment/distribution-template/monitoring-resources/kiali-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtualservice
  namespace: monitoring
spec:
  gateways:
    - monitoring-gateway
  hosts:
    - <<__subdomain_kiali__>>.<<__domain__>>
  http:
    - headers:
        request:
          add:
            x-forwarded-prefix: /
      match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: kiali.monitoring.svc.cluster.local
            port:
              number: 20001
