bodhi-aws-main/deployment/distribution-template/monitoring-resources/grafana-autorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: grafana-allow-external-access
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  rules:
    - to:
        - operation:
            hosts:
              - <<__subdomain_grafana__>>.<<__domain__>>
